--- a/history-thermostat.html
+++ b/history-thermostat.html
@@ -116,36 +116,35 @@
 <table data-toggle="table" class="table-responsive">
     <thead>
     <tr>
-		<th>Type</th>
-        <th>Date</th>
-        <th>Action</th>
+		<th>Date, Action Taken</th>
+        <th>Thermostat, Status</th>
+        
     </tr>
     </thead>
     <tbody>
     <tr id="tr_id_1" class="tr-class-1">
-        <td id="td_id_1" class="td-class-1">Manual</td>
-        <td>2015/03/01&nbsp;&nbsp;&nbsp;2:00PM</td>
-        <td>Cool: 24.0C [Fan: Auto] (Hold)</td>
+        <td id="td_id_1" class="td-class-1">2015/03/01&nbsp;&nbsp;&nbsp;2:00PM<br>Manual</td>
+        <td>cottageEX1990<br>Cool: 24.0C [Fan: Auto] (Hold)</td>
     </tr>
     <tr id="tr_id_2" class="tr-class-2">
-        <td id="td_id_2" class="td-class-2">Manual</td>
-        <td>2015/02/30&nbsp;&nbsp;&nbsp;1:43PM</td>
-        <td>Heat: 19.0C [Fan: Auto]</td>
+        <td id="td_id_2" class="td-class-2">2015/02/30&nbsp;&nbsp;&nbsp;1:43PM<br>Manual</td>
+        <td>home3EX990<br>
+        Heat: 19.0C [Fan: Auto]</td>
     </tr>
     <tr id="tr_id_3" class="tr-class-3">
-        <td id="td_id_3" class="td-class-3">Manual</td>
-        <td>2015/02/28&nbsp;&nbsp;&nbsp;1:26AM</td>
-        <td>Off: (Hold)</td>
+        <td id="td_id_3" class="td-class-3">2015/02/28&nbsp;&nbsp;&nbsp;1:26AM<br>Manual</td>
+        <td>cottageEX1990<br>
+        Off: (Hold)</td>
     </tr>
     <tr id="tr_id_4" class="tr-class-4">
-        <td id="td_id_4" class="td-class-4">Set Schedule</td>
-        <td>2015/02/14&nbsp;&nbsp;&nbsp;1:26AM</td>
-        <td>Schedule: Winter Schedule Name</td>
+        <td id="td_id_4" class="td-class-4">2015/02/14&nbsp;&nbsp;&nbsp;1:26AM<br>Set Schedule</td>
+        <td>home3EX990<br>
+        Schedule: Winter Schedule Name</td>
     </tr>
     <tr id="tr_id_5" class="tr-class-5">
-        <td id="td_id_5" class="td-class-5">Manual</td>
-        <td>2014/12/18 12:11PM</td>
-        <td>Heat: 24.0C [Fan: Auto] (Hold)</td>
+        <td id="td_id_5" class="td-class-5">2014/12/18 12:11PM<br>Manual</td>
+        <td>home3EX990<br>
+        Heat: 24.0C [Fan: Auto] (Hold)</td>
     </tr>
     </tbody>
 </table>
