--- a/viewThermostats.html
+++ b/viewThermostats.html
@@ -119,19 +119,23 @@
 </style>
 						<table id="table" class="table table-bordered table-hover table-condensed  table-stripped" data-toggle="table" data-show-refresh="true">
         <thead>
-        <tr><th class="bs-checkbox " style=""><div style="height: 34px;"><div class="th-inner "><div class="th-inner "><input name="btSelectItem" type="checkbox">Delete All</div></div><div class="fht-cell"></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"><div class="fht-cell"></div></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></th>
+        <tr><th class="bs-checkbox " style=""><div style="height: 34px;"><div class="th-inner "><div class="th-inner "><input name="btSelectItem" type="checkbox">Select All</div></div><div class="fht-cell"></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"><div class="fht-cell"></div></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></th>
 		
-		<th style=""><div class="th-inner "><div style="height: 34px;"><div class="th-inner "><div class="th-inner sortable">Location</div><div class="fht-cell"></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></th>
+		<th style=""><div class="th-inner "><div style="height: 34px;"><div class="th-inner "><div class="th-inner sortable">Location using Thermostat</div><div class="fht-cell"></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></th>
 
-		<th style=""><div class="th-inner "><div style="height: 34px;"><div class="th-inner "><div class="th-inner sortable">Device Name</div><div class="fht-cell"></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></th>
 		
 		
 		</tr>
         </thead>
     <tbody>
-		<tr class="selected" data-index="0"><td class="bs-radio" style=""><input data-index="0" name="btSelectItem" type="radio"></td><td style="">Muskoka Cottage</td><td style=""><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 0" class="editable editable-click">cottageEX1990</a></td></tr>
-		<tr class="selected" data-index="1"><td class="bs-radio" style=""><input data-index="1" name="btSelectItem" type="radio"></td><td style="">Office</td><td style=""><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 1" class="editable editable-click">officeEX790</a></td></tr>
-		<tr class="selected" data-index="2"><td class="bs-radio" style=""><input data-index="2" name="btSelectItem" type="radio"></td><td style="">Home</td><td style=""><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 2" class="editable editable-click">home3EX990</a></td></tr>
+		<tr class="selected" data-index="0"><td class="bs-radio" style=""><input data-index="0" name="btSelectItem" type="radio"></td>
+			<td style="">Muskoka Cottage<br><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 0" class="editable editable-click">cottageEX1990</a></td>
+		</tr>
+		<tr class="selected" data-index="1"><td class="bs-radio" style=""><input data-index="1" name="btSelectItem" type="radio"></td>
+			<td style="">Office<br><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 1" class="editable editable-click">officeEX790</a></td>
+		</tr>
+		<tr class="selected" data-index="2"><td class="bs-radio" style=""><input data-index="2" name="btSelectItem" type="radio"></td>
+		<td style="">Home<br><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 2" class="editable editable-click">home3EX990</a></td></tr>
 		</tbody></table>
 						</div>
 					<div class="btn-group-vertical" role="group" aria-label="...">
