--- a/viewSchedules.html
+++ b/viewSchedules.html
@@ -117,19 +117,33 @@
 </style>
 						<table id="table" class="table table-bordered table-hover table-condensed  table-stripped" data-toggle="table" data-show-refresh="true">
         <thead>
-        <tr><th class="bs-checkbox " style=""><div style="height: 34px;"><div class="th-inner "><div class="th-inner "><div class="th-inner "><input name="btSelectItem" type="checkbox">Delete All</div></div><div class="fht-cell"></div></div></div><div class="fht-cell"></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></th>
-		<th style=""><div class="th-inner "><div style="height: 34px;"><div class="th-inner "><div class="th-inner sortable">Name</div><div class="fht-cell"></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></th>
-		<th style=""><div class="th-inner "><div style="height: 34px;"><div class="th-inner "><div class="th-inner sortable">Assigned to Thermostat(s)</div><div class="fht-cell"></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></th>
+        <tr style="vertical-align: top"><th class="bs-checkbox " style=""><div style="height: 34px;" ><div class="th-inner "><div class="th-inner "><div class="th-inner "><input name="btSelectItem" type="checkbox">Select All</div></div><div class="fht-cell"></div></div></div><div class="fht-cell"></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></th>
+		<th style=""><div class="th-inner "><div style="height: 34px;"><div class="th-inner "><div class="th-inner sortable">Schedule Name, Assigned to Thermostat</div><div class="fht-cell"></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></th>
+		
 		
 		
 		</tr>
         </thead>
     <tbody>
-		<tr class="selected" data-index="0"><td class="bs-radio" style=""><input data-index="0" name="btSelectItem" type="radio"></td><td style="">Special Schedule</td><td style=""><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 0" class="editable editable-click">HomeEX809</a></td></tr>
-		<tr class="selected" data-index="1"><td class="bs-radio" style=""><input data-index="1" name="btSelectItem" type="radio"></td><td style="">Summer day</td><td style=""><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 1" class="editable editable-click">Home3EX990, cottageEX1990</a></td></tr>
-		<tr class="selected" data-index="2"><td class="bs-radio" style=""><input data-index="2" name="btSelectItem" type="radio"></td><td style="">Summer weekend</td><td style=""><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 2" class="editable editable-click">none</a></td></tr>
-		<tr class="selected" data-index="3"><td class="bs-radio" style=""><input data-index="3" name="btSelectItem" type="radio"></td><td style="">Winter-Fall day</td><td style=""><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 3" class="editable editable-click">none</a></td></tr>
-		<tr class="selected" data-index="4"><td class="bs-radio" style=""><input data-index="4" name="btSelectItem" type="radio"></td><td style="">Winter-Fall weekend</td><td style=""><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 4" class="editable editable-click">none</a></td></tr>
+		<tr class="selected" data-index="0">
+			<td class="bs-radio" style=""><input data-index="0" name="btSelectItem" type="radio"></td>
+				
+				<td style="vertical-align: top">Special Schedule<br>
+				<a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 0" class="editable editable-click">HomeEX809</a></td>
+			</tr>
+		<tr class="selected" data-index="1"><td class="bs-radio" style=""><input data-index="1" name="btSelectItem" type="radio"></td>
+			<td style="vertical-align: top">Summer day <br><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 1" class="editable editable-click">Home3EX990</a>
+			<br><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 1" class="editable editable-click">CottageEX1990</a>
+		</td></tr>
+		<tr class="selected" data-index="2"><td class="bs-radio" style=""><input data-index="2" name="btSelectItem" type="radio"></td>
+			<td style="vertical-align: top">Summer weekend<br><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 2" class="editable editable-click">none</a></td>
+		</tr>
+		<tr class="selected" data-index="3"><td class="bs-radio" style=""><input data-index="3" name="btSelectItem" type="radio"></td>
+			<td style="vertical-align: top">Winter-Fall day<br><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 3" class="editable editable-click">none</a></td>
+		</tr>
+		<tr class="selected" data-index="4"><td class="bs-radio" style=""><input data-index="4" name="btSelectItem" type="radio"></td>
+			<td style="vertical-align: top">Winter-Fall weekend<br><a href="javascript:void(0)" data-name="name" data-pk="undefined" data-value="Item 4" class="editable editable-click">none</a></td>
+		</tr>
 		</tbody></table>
 						</div>
 					<a href="analysis.html"><button type="button" class="btn btn-default  btn-lg btn-block btn-primary ">Analyse</button></a>
