--- a/viewSchedules.html
+++ b/viewSchedules.html
@@ -113,12 +113,13 @@
 						<div class="table-responsive">
 						<style>
 				table {background-color:#cfc}
+				#table a {text-decoration: underline;}
 
 </style>
 						<table id="table" class="table table-bordered table-hover table-condensed  table-stripped" data-toggle="table" data-show-refresh="true">
         <thead>
-        <tr style="vertical-align: top"><th class="bs-checkbox " style=""><div style="height: 34px;" ><div class="th-inner "><div class="th-inner "><div class="th-inner "><input name="btSelectItem" type="checkbox">Select All</div></div><div class="fht-cell"></div></div></div><div class="fht-cell"></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></th>
-		<th style=""><div class="th-inner "><div style="height: 34px;"><div class="th-inner "><div class="th-inner sortable">Schedule Name, Assigned to Thermostat</div><div class="fht-cell"></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></th>
+        <tr style="vertical-align: top"><th class="bs-checkbox " style=""><div class="th-inner "><div class="th-inner "><div class="th-inner "><input name="btSelectItem" type="checkbox">Select All</div></div><div class="fht-cell"></div></div></div><div class="fht-cell"></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></th>
+		<th style=""><div class="th-inner "><div class="th-inner "><div class="th-inner sortable">Schedule,Thermostat</div><div class="fht-cell"></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></th>
 		
 		
 		
@@ -153,7 +154,8 @@
 							<a href="schedule-create.html"><button type="button" class="btn btn-default btn-success btn-lg ">Add</button></a>
 						  </div>
 						  <div class="btn-group" role="group">
-							<button type="button" class="btn btn-default btn-warning btn-lg">Edit</button>
+							<a href="schedule-create.html">
+							<button type="button" class="btn btn-default btn-warning btn-lg">Edit</button></a>
 						  </div>
 						  <div class="btn-group" role="group">
 							<button type="button" class="btn btn-danger btn-default btn-lg">Delete</button>
