--- a/viewThermostats.html
+++ b/viewThermostats.html
@@ -22,9 +22,6 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-<style>
-	a {text-decoration: underline;}
-</style>
 </head>
 
 <body>
@@ -116,12 +113,16 @@
 									<style>
 				table {background-color:#cfc}
 
+	#table a {text-decoration: underline;}
+
+
+
 </style>
 						<table id="table" class="table table-bordered table-hover table-condensed  table-stripped" data-toggle="table" data-show-refresh="true">
         <thead>
-        <tr><th class="bs-checkbox " style=""><div style="height: 34px;"><div class="th-inner "><div class="th-inner "><input name="btSelectItem" type="checkbox">Select All</div></div><div class="fht-cell"></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"><div class="fht-cell"></div></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></th>
+        <tr style="vertical-align: top"><th class="bs-checkbox " style=""><div class="th-inner "><div class="th-inner "><div class="th-inner "><input name="btSelectItem" type="checkbox">Select All</div></div><div class="fht-cell"></div></div></div><div class="fht-cell"></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></th>
 		
-		<th style=""><div class="th-inner "><div style="height: 34px;"><div class="th-inner "><div class="th-inner sortable">Location using Thermostat</div><div class="fht-cell"></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></th>
+		<th style=""><div class="th-inner "><div ><div class="th-inner "><div class="th-inner sortable">Location using Thermostat</div><div class="fht-cell"></div></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></div><div class="fht-cell"></div><div style="margin: 0px 2px 2px; display: none;" class="filterControl"></div></th>
 
 		
 		
