--- a/schedule-create.html
+++ b/schedule-create.html
@@ -114,6 +114,7 @@
                 <div class="row">
 				
                     <div class="col-lg-10">
+					<h3>Schedule Configuration</h3>
 					<br>
 						<div class="form-inline">
 								<div class="input-group">
