--- a/homePage.html
+++ b/homePage.html
@@ -30,6 +30,8 @@
 							</li>
 							<li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
 							</li>
+							<li><a href="homePageFrench.html"><i class="fa fa-font fa-fw"></i> Français</a>
+							</li>
 							<li class="divider"></li>
 							<li><a href="index.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
 							</li>
